--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.displayname>SkyCore</project.displayname>
+		<project.displayname>${project.artifactId}</project.displayname>
 	</properties>
 	
 	<groupId>com.skytonia</groupId>
-	<artifactId>${project.displayname}</artifactId>
+	<artifactId>SkyCore</artifactId>
 	<version>1.0</version>
 	<packaging>jar</packaging>
 	
@@ -25,7 +25,6 @@
 			<groupId>org.spigotmc</groupId>
 			<artifactId>spigot-api</artifactId>
 			<version>1.8.8-R0.1-SNAPSHOT</version>
-			<optional>true</optional>
 			<scope>provided</scope>
 		</dependency>
 		
@@ -36,7 +35,7 @@
 			<version>1.8.8-R0.1-SNAPSHOT</version>
 			<scope>system</scope>
 			<optional>true</optional>
-			<systemPath>${project.basedir}/lib/spigot-1.8.8.jar</systemPath>
+			<systemPath>${project.basedir}/../lib/spigot-1.8.8.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>org.spigotmc</groupId>
@@ -44,7 +43,15 @@
 			<version>1.10-R0.1-SNAPSHOT</version>
 			<scope>system</scope>
 			<optional>true</optional>
-			<systemPath>${project.basedir}/lib/spigot-1.10.jar</systemPath>
+			<systemPath>${project.basedir}/../lib/spigot-1.10.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>org.spigotmc</groupId>
+			<artifactId>Spigot-v1_11_R1</artifactId>
+			<version>1.11-R0.1-SNAPSHOT</version>
+			<scope>system</scope>
+			<optional>true</optional>
+			<systemPath>${project.basedir}/../lib/spigot-1.11.jar</systemPath>
 		</dependency>
 		
 		<!-- Database -->
