Move spigot libraries to internal lib folder

--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
 			<version>1.7.10-R0.1-SNAPSHOT</version>
 			<scope>system</scope>
 			<optional>true</optional>
-			<systemPath>${project.basedir}/../lib/spigot-1.7.10-tw.jar</systemPath>
+			<systemPath>${project.basedir}/lib/spigot-1.7.10-tw.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>org.spigotmc</groupId>
@@ -51,7 +51,7 @@
 			<version>1.8.8-R0.1-SNAPSHOT</version>
 			<scope>system</scope>
 			<optional>true</optional>
-			<systemPath>${project.basedir}/../lib/spigot-1.8.8.jar</systemPath>
+			<systemPath>${project.basedir}/lib/spigot-1.8.8.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>org.spigotmc</groupId>
@@ -59,7 +59,7 @@
 			<version>1.10-R0.1-SNAPSHOT</version>
 			<scope>system</scope>
 			<optional>true</optional>
-			<systemPath>${project.basedir}/../lib/spigot-1.10.jar</systemPath>
+			<systemPath>${project.basedir}/lib/spigot-1.10.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>org.spigotmc</groupId>
@@ -67,7 +67,7 @@
 			<version>1.11-R0.1-SNAPSHOT</version>
 			<scope>system</scope>
 			<optional>true</optional>
-			<systemPath>${project.basedir}/../lib/spigot-1.11.jar</systemPath>
+			<systemPath>${project.basedir}/lib/spigot-1.11.2.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>org.spigotmc</groupId>
@@ -75,7 +75,7 @@
 			<version>1.12-R0.1-SNAPSHOT</version>
 			<scope>system</scope>
 			<optional>true</optional>
-			<systemPath>${project.basedir}/../lib/spigot-1.12.jar</systemPath>
+			<systemPath>${project.basedir}/lib/spigot-1.12.jar</systemPath>
 		</dependency>
 		
 		<!-- Redis -->
