--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,9 @@
 			<groupId>com.skytonia</groupId>
 			<artifactId>SkyCosmetics</artifactId>
 			<version>1.0</version>
-			<scope>provided</scope>
+			<scope>system</scope>
+			<optional>true</optional>
+			<systemPath>${project.basedir}/lib/SkyCosmetics.jar</systemPath>
 		</dependency>
 		
 		<dependency>
