--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,10 @@
 			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
 		</repository>
 		<repository>
+			<id>destroystokyo-repo</id>
+			<url>https://repo.destroystokyo.com/repository/maven-public//</url>
+		</repository>
+		<repository>
 			<id>dmulloy2-repo</id>
 			<url>http://repo.dmulloy2.net/content/groups/public/</url>
 		</repository>
@@ -31,8 +35,8 @@
 		<!-- Spigot-API / 1.9 NMS-->
 		<dependency>
 			<groupId>com.destroystokyo.paper</groupId>
-			<artifactId>paper</artifactId>
-			<version>1.9.4-R0.1-SNAPSHOT</version>
+			<artifactId>paper-api</artifactId>
+			<version>1.11.2-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		
@@ -52,6 +56,14 @@
 			<scope>system</scope>
 			<optional>true</optional>
 			<systemPath>${project.basedir}/lib/spigot-1.8.8.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>org.spigotmc</groupId>
+			<artifactId>Spigot-v1_9_R1</artifactId>
+			<version>1.9.4-R0.1-SNAPSHOT</version>
+			<scope>system</scope>
+			<optional>true</optional>
+			<systemPath>${project.basedir}/lib/spigot-1.9.4.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>org.spigotmc</groupId>
