--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,8 @@
 			<artifactId>SkyRestart</artifactId>
 			<version>1.0</version>
 			<scope>provided</scope>
+			<optional>true</optional>
+			<systemPath>${project.basedir}/lib/SkyRestart.jar</systemPath>
 		</dependency>
 		
 		<!-- Database -->
