--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,7 @@
 		<dependency>
 			<groupId>com.zaxxer</groupId>
 			<artifactId>HikariCP</artifactId>
-			<version>2.4.5</version>
+			<version>2.7.8</version>
 		</dependency>
 		
 		<!-- Plugin Dependencies -->
@@ -130,6 +130,12 @@
 			<scope>system</scope>
 			<optional>true</optional>
 			<systemPath>${project.basedir}/lib/SkyCosmetics.jar</systemPath>
+		</dependency>
+
+		<dependency>
+			<groupId>me.theminecoder.bug</groupId>
+			<artifactId>BukkitBugSnag</artifactId>
+			<version>LATEST</version>
 		</dependency>
 		
 		<dependency>
