--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,14 @@
 			<optional>true</optional>
 			<systemPath>${project.basedir}/../../lib/spigot-1.12.jar</systemPath>
 		</dependency>
+		<dependency>
+			<groupId>org.spigotmc</groupId>
+			<artifactId>Spigot-v1_13_R1</artifactId>
+			<version>1.13-R0.1-SNAPSHOT</version>
+			<scope>system</scope>
+			<optional>true</optional>
+			<systemPath>${project.basedir}/../../lib/spigot-1.13.jar</systemPath>
+		</dependency>
 		
 		<!-- Redis -->
 		<dependency>
