Correct 1.13 default material and avoid 1.13 compatibility layer

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,5 +3,6 @@ version: ${project.version}
 author: OhBlihv
 main: ${project.groupId}.${project.artifactId}.${project.artifactId}
 softdepend: [ProtocolLib, LilyPad-Connect]
+api-version: 1.13
 commands:
     ${project.artifactId}:
