--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,15 @@
 			<optional>true</optional>
 			<systemPath>${project.basedir}/../../lib/paper-1.13.2.jar</systemPath>
 		</dependency>
+
+		<dependency>
+			<groupId>org.spigotmc</groupId>
+			<artifactId>Spigot-v1_14_R1</artifactId>
+			<version>1.14-R0.1-SNAPSHOT</version>
+			<scope>system</scope>
+			<optional>true</optional>
+			<systemPath>${project.basedir}/../../lib/spigot-1.14.jar</systemPath>
+		</dependency>
 		
 		<!-- Redis -->
 		<dependency>
@@ -240,6 +249,18 @@
 				<configuration>
 					<additionalparam>-Xdoclint:none</additionalparam>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.4</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>test-jar</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
